--- a/article.html
+++ b/article.html
@@ -27,7 +27,13 @@
     <nav id="main-nav">
       <div class="container">
         <div class="nav-header">
-          <img class="logo" src="img/logo.png" alt="NewsGrid" />
+          <img class="logo" id="logo" src="img/logo.png" alt="NewsGrid" />
+          <input type="checkbox" class="checkbox" id="checkbox" />
+          <label for="checkbox" class="label">
+            <i class="fas fa-moon"></i>
+            <i class="fas fa-sun"></i>
+            <div class="ball" id="ball"></div>
+          </label>
           <button class="nav-toggle">
             <i class="fa fa-bars"></i>
           </button>
